// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppConfirmUninstall render correctly 1`] = `
<div
  data-test="confirm-content"
>
  <ModalHeader
    afterClose={[MockFunction]}
    title="Confirm mockAppName uninstall"
  />
  <ModalBody
    body={
      <SubTitleH6
        isCentered={true}
      >
        Are you sure you wish to uninstall 
        mockAppName
        ? This action will uninstall the app for ALL platform users.
      </SubTitleH6>
    }
  />
  <ModalFooter
    footerItems={
      <React.Fragment>
        <Button
          className="mx-4"
          dataTest="agree-btn"
          fullWidth={true}
          loading={false}
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Agree
        </Button>
        <Button
          className="mx-4"
          dataTest="disagree-btn"
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          type="button"
          variant="danger"
        >
          Disagree
        </Button>
      </React.Fragment>
    }
  />
</div>
`;

exports[`AppConfirmUninstall render correctly 2`] = `
<div
  data-test="confirm-content"
>
  <ModalHeader
    afterClose={[MockFunction]}
    title="Confirm mockAppName uninstall"
  />
  <ModalBody
    body={
      <SubTitleH6
        isCentered={true}
      >
        Are you sure you wish to uninstall 
        mockAppName
        ? This action will uninstall the app for ALL platform users.
      </SubTitleH6>
    }
  />
  <ModalFooter
    footerItems={
      <React.Fragment>
        <Button
          className="mx-4"
          dataTest="agree-btn"
          fullWidth={true}
          loading={false}
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Agree
        </Button>
        <Button
          className="mx-4"
          dataTest="disagree-btn"
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          type="button"
          variant="danger"
        >
          Disagree
        </Button>
      </React.Fragment>
    }
  />
</div>
`;

exports[`AppConfirmUninstall render correctly 3`] = `
<div
  data-test="confirm-content"
>
  <ModalHeader
    afterClose={[MockFunction]}
    title="Confirm mockAppName uninstall"
  />
  <ModalBody
    body={
      <SubTitleH6
        isCentered={true}
      >
        Are you sure you wish to uninstall 
        mockAppName
        ? This action will uninstall the app for ALL platform users.
      </SubTitleH6>
    }
  />
  <ModalFooter
    footerItems={
      <React.Fragment>
        <Button
          className="mx-4"
          dataTest="agree-btn"
          fullWidth={true}
          loading={true}
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Agree
        </Button>
        <Button
          className="mx-4"
          dataTest="disagree-btn"
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          type="button"
          variant="danger"
        >
          Disagree
        </Button>
      </React.Fragment>
    }
  />
</div>
`;

exports[`AppConfirmUninstall render correctly 4`] = `
<div
  data-test="confirm-content"
>
  <ModalHeader
    afterClose={[MockFunction]}
    title="Confirm mockAppName uninstall"
  />
  <ModalBody
    body={
      <SubTitleH6
        isCentered={true}
      >
        Are you sure you wish to uninstall 
        mockAppName
        ? This action will uninstall the app for ALL platform users.
      </SubTitleH6>
    }
  />
  <ModalFooter
    footerItems={
      <React.Fragment>
        <Button
          className="mx-4"
          dataTest="agree-btn"
          fullWidth={true}
          loading={false}
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Agree
        </Button>
        <Button
          className="mx-4"
          dataTest="disagree-btn"
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          type="button"
          variant="danger"
        >
          Disagree
        </Button>
      </React.Fragment>
    }
  />
</div>
`;

exports[`AppConfirmUninstall render correctly 5`] = `""`;
